04_git/aws/10_eks/03_aws_eks/01_bootstrap/argo/yaml/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-cd-ingress-03-aws-eks
  namespace: default
spec:
  ingressClassName: external-nginx
  rules:
    - host: 03-aws-eks.panwang.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argo-cd-argocd-server
                port:
                  number: 80
